[project]
dependencies = [
    "museval == 0.4.0",
    "soundfile == 0.12.1",
    "torch >= 1.13.1",
    "torchaudio >= 0.13.1",
    "pytorch-lightning == 1.9.2",
    "musdb == 0.4.0",
    "numpy",
    "hydra-core == 1.3.1",
    "omegaconf == 2.3.0",
    "tensorboard == 2.12.0",
    "tqdm",
]
name = "BandSplitRNN"
description = "An implementation of https://github.com/amanteur/BandSplitRNN-PyTorch/tree/main "
version = "0.1.0"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "BandSplitRNN" = "src" }
